# embedded-rust-f446re

./: Cargo.toml  NOTES.md  README.md  memory.x  visualisation.html
.cargo/: config.toml
src/: main.rs
